--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "@types/jsonwebtoken": "^8.5.8",
       "@types/node": "^16.11.10",
       "ts-node": "10.7.0",
+      "tslib": "^2.4.0",
       "typescript": "4.5.2"
    },
    "dependencies": {
